--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ function reveal(i){
     cardText.textContent=category;
   }else{
     cardTitle.textContent=answer;
-    cardText.textContent="Stay niche.";
+    cardText.textContent="Keep quiet.";
   }
 }
 function closeOverlay(){overlay.classList.remove("show");}
