--- a/index.html
+++ b/index.html
@@ -5,94 +5,128 @@
 <title>Imposter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- iOS Add to Home Screen -->
+<!-- iOS App Mode -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Imposter">
 
+<!-- Spy Silhouette Icon -->
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+  <defs>
+    <linearGradient id='g' x1='0' y1='0' x2='1' y2='1'>
+      <stop offset='0%' stop-color='%2360a5fa'/>
+      <stop offset='100%' stop-color='%231e40af'/>
+    </linearGradient>
+  </defs>
+  <circle cx='50' cy='50' r='50' fill='%23020717'/>
+  <path d='M30 70c0-15 40-15 40 0v8H30z' fill='url(%23g)'/>
+  <circle cx='50' cy='38' r='16' fill='url(%23g)'/>
+  <rect x='25' y='32' width='50' height='10' rx='5' fill='%23020717'/>
+</svg>">
+
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
 
 :root{
-  --bg:#0b0b0b;
-  --card:#111827;
-  --tile:#1f2937;
-  --accent:#38bdf8;
+  --bg:#05070d;
+  --panel:#0f172a;
+  --tile:#111c3a;
+  --accent:#60a5fa;
+  --accent2:#1e40af;
   --text:#e5e7eb;
-  --muted:#9ca3af;
+  --muted:#94a3b8;
 }
 
 *{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif;}
+
 body{
   margin:0;
-  background:var(--bg);
+  background:radial-gradient(circle at top,#0b122a,var(--bg));
   color:var(--text);
   text-align:center;
-  padding:20px;
+  padding:22px;
 }
+
 .hidden{display:none}
+
+h1{
+  font-size:34px;
+  font-weight:800;
+  letter-spacing:-0.6px;
+  margin-bottom:6px;
+}
+
+.subtitle{
+  font-size:14px;
+  color:var(--muted);
+  margin-bottom:20px;
+}
 
 button{
   border:none;
   border-radius:999px;
-  padding:12px 22px;
-  background:#374151;
-  color:var(--text);
-  font-weight:600;
+  padding:14px 28px;
+  font-weight:700;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+  color:#020617;
   cursor:pointer;
+  transition:.2s;
 }
-button:hover{opacity:.9}
-
-h1{margin-bottom:6px}
+button.secondary{
+  background:#1e293b;
+  color:var(--text);
+}
+button:hover{transform:translateY(-2px);opacity:.95}
 
 .controls,.names{
   display:flex;
   gap:12px;
   justify-content:center;
   flex-wrap:wrap;
-  margin-bottom:16px;
+  margin-bottom:18px;
 }
 
 input{
-  background:var(--card);
+  background:var(--panel);
   color:var(--text);
-  border:1px solid #374151;
-  border-radius:10px;
-  padding:8px;
-  font-size:14px;
-  width:80px;
+  border:1px solid #1e293b;
+  border-radius:14px;
+  padding:10px;
+  width:90px;
   text-align:center;
 }
-.names input{width:130px}
+.names input{width:160px}
 
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(130px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
   gap:18px;
-  max-width:700px;
+  max-width:740px;
   margin:28px auto;
 }
 
 .tile{
-  background:var(--tile);
-  padding:42px 10px;
-  border-radius:18px;
+  background:linear-gradient(145deg,var(--tile),#0b1433);
+  padding:52px 12px;
+  border-radius:24px;
+  font-weight:600;
   cursor:pointer;
   transition:.25s;
 }
-.tile:hover{transform:translateY(-2px)}
+.tile:hover{transform:translateY(-3px)}
 .tile.used{opacity:0;pointer-events:none}
 
 #speaker{
   color:var(--accent);
-  font-weight:600;
-  margin:10px 0;
+  font-weight:700;
+  margin:14px 0;
 }
 
 .overlay{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.8);
+  background:rgba(3,6,23,.88);
   display:flex;
   align-items:center;
   justify-content:center;
@@ -103,49 +137,52 @@ input{
 .overlay.show{opacity:1;pointer-events:auto}
 
 .card{
-  background:var(--card);
-  padding:36px 30px;
-  border-radius:22px;
-  max-width:360px;
+  background:linear-gradient(160deg,#0f172a,#020617);
+  padding:40px 32px;
+  border-radius:28px;
+  max-width:400px;
   width:90%;
-  animation:flip .35s ease;
+  animation:pop .35s ease;
 }
-@keyframes flip{
-  from{transform:rotateX(90deg);opacity:0}
-  to{transform:none;opacity:1}
+@keyframes pop{
+  from{transform:scale(.85);opacity:0}
+  to{transform:scale(1);opacity:1}
 }
 .card p{color:var(--muted)}
 
-#revealBtn{
-  display:none;
-  background:var(--accent);
-  color:#020617;
-}
+#revealBtn{display:none;margin-left:8px}
 </style>
 </head>
 <body>
 
-<!-- SETUP SCREEN -->
+<!-- SETUP -->
 <div id="setup">
-  <h1>🎭 Imposter</h1>
+  <h1>Imposter</h1>
+  <div class="subtitle">A social deduction party game</div>
+
   <div class="controls">
     Players <input id="playerCount" type="number" min="4" max="12" value="6">
     Imposters <input id="imposterCount" type="number" min="1" max="3" value="1">
   </div>
+
   <div class="names" id="nameInputs"></div>
-  <button onclick="startGame()">▶️ Start Game</button>
+
+  <button onclick="startGame()">Start Game</button>
 </div>
 
-<!-- GAME SCREEN -->
+<!-- GAME -->
 <div id="game" class="hidden">
-  <h1>🎭 Imposter</h1>
+  <h1>Imposter</h1>
   <p id="speaker"></p>
+
   <div class="grid" id="grid"></div>
+
+  <button class="secondary" onclick="editNames()">✏️ Edit Names</button>
   <button onclick="startRound()">🔄 New Round</button>
-  <button id="revealBtn" onclick="showEnd()">👁 Reveal Round</button>
+  <button id="revealBtn" onclick="showEnd()">👁 Reveal</button>
 </div>
 
-<!-- ROLE OVERLAY -->
+<!-- ROLE -->
 <div class="overlay" id="overlay">
   <div class="card">
     <h2 id="cardTitle"></h2>
@@ -154,7 +191,7 @@ input{
   </div>
 </div>
 
-<!-- END OVERLAY -->
+<!-- END -->
 <div class="overlay" id="endOverlay">
   <div class="card">
     <h2>Round Reveal</h2>
@@ -183,7 +220,6 @@ const data={
 };
 
 let names=[],roles=[],category="",answer="",viewed=0;
-
 const rand=a=>a[Math.floor(Math.random()*a.length)];
 const shuffle=a=>{for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}};
 
@@ -192,6 +228,7 @@ function buildNames(){
   for(let i=0;i<playerCount.value;i++){
     const inp=document.createElement("input");
     inp.placeholder=`Player ${i+1}`;
+    if(names[i]) inp.value=names[i];
     nameInputs.appendChild(inp);
   }
 }
@@ -203,6 +240,12 @@ function startGame(){
   setup.classList.add("hidden");
   game.classList.remove("hidden");
   startRound();
+}
+
+function editNames(){
+  game.classList.add("hidden");
+  setup.classList.remove("hidden");
+  buildNames();
 }
 
 function startRound(){
@@ -242,7 +285,7 @@ function reveal(i){
     cardText.textContent=category;
   }else{
     cardTitle.textContent=answer;
-    cardText.textContent="Stay quiet.";
+    cardText.textContent="Stay niche.";
   }
 }
 function closeOverlay(){overlay.classList.remove("show");}
