--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ input{
 <!-- SETUP -->
 <div id="setup">
   <h1>Imposter</h1>
-  <div class="subtitle">A social deduction party game</div>
+  <div class="subtitle">Find the fraud.</div>
 
   <div class="controls">
     Players <input id="playerCount" type="number" min="4" max="12" value="6">
@@ -285,7 +285,7 @@ function reveal(i){
     cardText.textContent=category;
   }else{
     cardTitle.textContent=answer;
-    cardText.textContent="Stay niche.";
+    cardText.textContent="Stay silent.";
   }
 }
 function closeOverlay(){overlay.classList.remove("show");}
