--- a/index.html
+++ b/index.html
@@ -5,297 +5,324 @@
 <title>Imposter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- iOS App Mode -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Imposter">
 
-<!-- Spy Silhouette Icon -->
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-  <defs>
-    <linearGradient id='g' x1='0' y1='0' x2='1' y2='1'>
-      <stop offset='0%' stop-color='%2360a5fa'/>
-      <stop offset='100%' stop-color='%231e40af'/>
-    </linearGradient>
-  </defs>
-  <circle cx='50' cy='50' r='50' fill='%23020717'/>
-  <path d='M30 70c0-15 40-15 40 0v8H30z' fill='url(%23g)'/>
-  <circle cx='50' cy='38' r='16' fill='url(%23g)'/>
-  <rect x='25' y='32' width='50' height='10' rx='5' fill='%23020717'/>
+<svg xmlns='http://www.w3.org2000/svg' viewBox='0 0 100 100'>
+<defs>
+<linearGradient id='g' x1='0' y1='0' x2='1' y2='1'>
+<stop offset='0%' stop-color='%2360a5fa'/>
+<stop offset='100%' stop-color='%231e40af'/>
+</linearGradient>
+</defs>
+<circle cx='50' cy='50' r='50' fill='%23020717'/>
+<circle cx='50' cy='38' r='16' fill='url(%23g)'/>
+<path d='M30 70c0-15 40-15 40 0v8H30z' fill='url(%23g)'/>
+<rect x='25' y='32' width='50' height='10' rx='5' fill='%23020717'/>
 </svg>">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
 
 :root{
-  --bg:#05070d;
-  --panel:#0f172a;
-  --tile:#111c3a;
-  --accent:#60a5fa;
-  --accent2:#1e40af;
-  --text:#e5e7eb;
-  --muted:#94a3b8;
+--bg:#020617;
+--panel:#0f172a;
+--tile:#111c3a;
+--accent:#60a5fa;
+--accent2:#1e40af;
+--text:#e5e7eb;
+--muted:#94a3b8;
 }
 
-*{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif;}
+*{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif}
 
 body{
-  margin:0;
-  background:radial-gradient(circle at top,#0b122a,var(--bg));
-  color:var(--text);
-  text-align:center;
-  padding:22px;
+margin:0;
+background:linear-gradient(180deg,#020617 0%,#020617 25%,#0b122a 60%,#020617 100%);
+color:var(--text);
+text-align:center;
+padding:22px;
 }
 
 .hidden{display:none}
 
 h1{
-  font-size:34px;
-  font-weight:800;
-  letter-spacing:-0.6px;
-  margin-bottom:6px;
+font-size:32px;
+font-weight:800;
+margin-bottom:6px;
 }
 
 .subtitle{
-  font-size:14px;
-  color:var(--muted);
-  margin-bottom:20px;
+font-size:14px;
+color:var(--muted);
+margin-bottom:18px;
 }
 
 button{
-  border:none;
-  border-radius:999px;
-  padding:14px 28px;
-  font-weight:700;
-  background:linear-gradient(135deg,var(--accent),var(--accent2));
-  color:#020617;
-  cursor:pointer;
-  transition:.2s;
+border:none;
+border-radius:999px;
+padding:14px 26px;
+font-weight:700;
+background:linear-gradient(135deg,var(--accent),var(--accent2));
+color:#020617;
+cursor:pointer;
+transition:.2s;
 }
-button.secondary{
-  background:#1e293b;
-  color:var(--text);
-}
-button:hover{transform:translateY(-2px);opacity:.95}
 
-.controls,.names{
-  display:flex;
-  gap:12px;
-  justify-content:center;
-  flex-wrap:wrap;
-  margin-bottom:18px;
+button.secondary{
+background:#1e293b;
+color:var(--text);
+}
+
+button:hover{transform:translateY(-2px)}
+
+.controls{
+display:flex;
+justify-content:center;
+align-items:center;
+gap:14px;
+flex-wrap:nowrap;
+margin-bottom:18px;
+}
+
+.controls label{
+display:flex;
+align-items:center;
+gap:8px;
+font-size:14px;
+color:var(--muted);
 }
 
 input{
-  background:var(--panel);
-  color:var(--text);
-  border:1px solid #1e293b;
-  border-radius:14px;
-  padding:10px;
-  width:90px;
-  text-align:center;
+background:var(--panel);
+color:var(--text);
+border:1px solid #1e293b;
+border-radius:14px;
+padding:10px;
+width:80px;
+text-align:center;
 }
-.names input{width:160px}
+
+.names{
+display:flex;
+flex-wrap:wrap;
+gap:10px;
+justify-content:center;
+margin-bottom:20px;
+}
+
+.names input{width:150px}
 
 .grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-  gap:18px;
-  max-width:740px;
-  margin:28px auto;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+gap:18px;
+max-width:760px;
+margin:26px auto;
 }
 
 .tile{
-  background:linear-gradient(145deg,var(--tile),#0b1433);
-  padding:52px 12px;
-  border-radius:24px;
-  font-weight:600;
-  cursor:pointer;
-  transition:.25s;
+background:linear-gradient(145deg,var(--tile),#0b1433);
+padding:52px 10px;
+border-radius:24px;
+font-weight:600;
+cursor:pointer;
+transition:.25s;
 }
+
 .tile:hover{transform:translateY(-3px)}
 .tile.used{opacity:0;pointer-events:none}
 
 #speaker{
-  color:var(--accent);
-  font-weight:700;
-  margin:14px 0;
+color:var(--accent);
+font-weight:700;
+margin:12px 0;
 }
 
 .overlay{
-  position:fixed;
-  inset:0;
-  background:rgba(3,6,23,.88);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  opacity:0;
-  pointer-events:none;
-  transition:.3s;
+position:fixed;
+inset:0;
+background:rgba(3,6,23,.88);
+display:flex;
+align-items:center;
+justify-content:center;
+opacity:0;
+pointer-events:none;
+transition:.3s;
 }
+
 .overlay.show{opacity:1;pointer-events:auto}
 
 .card{
-  background:linear-gradient(160deg,#0f172a,#020617);
-  padding:40px 32px;
-  border-radius:28px;
-  max-width:400px;
-  width:90%;
-  animation:pop .35s ease;
+background:linear-gradient(160deg,#0f172a,#020617);
+padding:36px 30px;
+border-radius:26px;
+max-width:400px;
+width:90%;
+animation:pop .35s ease;
 }
+
 @keyframes pop{
-  from{transform:scale(.85);opacity:0}
-  to{transform:scale(1);opacity:1}
+from{transform:scale(.9);opacity:0}
+to{transform:scale(1);opacity:1}
 }
+
 .card p{color:var(--muted)}
 
 #revealBtn{display:none;margin-left:8px}
+
+@media (max-width:420px){
+h1{font-size:28px}
+.tile{padding:44px 8px}
+}
 </style>
 </head>
+
 <body>
 
-<!-- SETUP -->
 <div id="setup">
-  <h1>Imposter</h1>
-  <div class="subtitle">Find the fraud.</div>
+<h1>Imposter</h1>
+<div class="subtitle">Find the fraud.</div>
 
-  <div class="controls">
-    Players <input id="playerCount" type="number" min="4" max="12" value="6">
-    Imposters <input id="imposterCount" type="number" min="1" max="3" value="1">
-  </div>
-
-  <div class="names" id="nameInputs"></div>
-
-  <button onclick="startGame()">Start Game</button>
+<div class="controls">
+<label>Players <input id="playerCount" type="number" min="4" max="12" value="6"></label>
+<label>Imposters <input id="imposterCount" type="number" min="1" max="3" value="1"></label>
 </div>
 
-<!-- GAME -->
+<div class="names" id="nameInputs"></div>
+
+<button onclick="startGame()">Start Game</button>
+</div>
+
 <div id="game" class="hidden">
-  <h1>Imposter</h1>
-  <p id="speaker"></p>
+<h1>Imposter</h1>
+<p id="speaker"></p>
 
-  <div class="grid" id="grid"></div>
+<div class="grid" id="grid"></div>
 
-  <button class="secondary" onclick="editNames()">✏️ Edit Names</button>
-  <button onclick="startRound()">🔄 New Round</button>
-  <button id="revealBtn" onclick="showEnd()">👁 Reveal</button>
+<button class="secondary" onclick="editNames()">✏️ Edit Names</button>
+<button onclick="startRound()">🔄 New Round</button>
+<button id="revealBtn" onclick="showEnd()">👁 Reveal</button>
 </div>
 
-<!-- ROLE -->
 <div class="overlay" id="overlay">
-  <div class="card">
-    <h2 id="cardTitle"></h2>
-    <p id="cardText"></p>
-    <button onclick="closeOverlay()">Got it</button>
-  </div>
+<div class="card">
+<h2 id="cardTitle"></h2>
+<p id="cardText"></p>
+<button onclick="closeOverlay()">Got it</button>
+</div>
 </div>
 
-<!-- END -->
 <div class="overlay" id="endOverlay">
-  <div class="card">
-    <h2>Round Reveal</h2>
-    <p><b>Category:</b> <span id="finalCategory"></span></p>
-    <p><b>Answer:</b> <span id="finalAnswer"></span></p>
-    <p><b>Imposters:</b></p>
-    <p id="finalImposters"></p>
-    <button onclick="closeEnd()">Next Round</button>
-  </div>
+<div class="card">
+<h2>Round Reveal</h2>
+<p><b>Category:</b> <span id="finalCategory"></span></p>
+<p><b>Answer:</b> <span id="finalAnswer"></span></p>
+<p><b>Imposters:</b></p>
+<p id="finalImposters"></p>
+<button onclick="closeEnd()">Next Round</button>
+</div>
 </div>
 
 <script>
 const data={
-  MLB:{
-    players:["Shohei Ohtani","Aaron Judge","Mookie Betts","Ronald Acuña Jr.","Juan Soto","Mike Trout","Freddie Freeman","Bryce Harper","Fernando Tatis Jr.","Corey Seager","Jose Altuve","Vladimir Guerrero Jr."],
-    teams:["Yankees","Red Sox","Blue Jays","Rays","Orioles","Guardians","Tigers","Royals","Twins","White Sox","Astros","Mariners","Rangers","Angels","Athletics","Braves","Mets","Phillies","Marlins","Nationals","Brewers","Cubs","Cardinals","Reds","Pirates","Dodgers","Padres","Giants","Diamondbacks","Rockies"]
-  },
-  NFL:{
-    players:["Patrick Mahomes","Josh Allen","Joe Burrow","Lamar Jackson","Justin Jefferson","Tyreek Hill","Christian McCaffrey","Travis Kelce","Aaron Rodgers","CeeDee Lamb","Jalen Hurts"],
-    teams:["Cardinals","Falcons","Ravens","Bills","Panthers","Bears","Bengals","Browns","Cowboys","Broncos","Lions","Packers","Texans","Colts","Jaguars","Chiefs","Raiders","Chargers","Rams","Dolphins","Vikings","Patriots","Saints","Giants","Jets","Eagles","Steelers","49ers","Seahawks","Buccaneers","Titans","Commanders"]
-  },
-  NBA:{
-    players:["LeBron James","Stephen Curry","Kevin Durant","Nikola Jokic","Giannis Antetokounmpo","Luka Dončić","Jayson Tatum","Joel Embiid"],
-    teams:["Hawks","Celtics","Nets","Hornets","Bulls","Cavaliers","Mavericks","Nuggets","Pistons","Warriors","Rockets","Pacers","Clippers","Lakers","Grizzlies","Heat","Bucks","Timberwolves","Pelicans","Knicks","Thunder","Magic","76ers","Suns","Trail Blazers","Kings","Spurs","Raptors","Jazz","Wizards"]
-  }
+MLB:{
+players:["Shohei Ohtani","Aaron Judge","Mookie Betts","Ronald Acuña Jr.","Juan Soto","Mike Trout","Freddie Freeman","Bryce Harper","Fernando Tatis Jr.","Corey Seager","Jose Altuve","Vladimir Guerrero Jr."],
+teams:["Yankees","Red Sox","Blue Jays","Rays","Orioles","Guardians","Tigers","Royals","Twins","White Sox","Astros","Mariners","Rangers","Angels","Athletics","Braves","Mets","Phillies","Marlins","Nationals","Brewers","Cubs","Cardinals","Reds","Pirates","Dodgers","Padres","Giants","Diamondbacks","Rockies"]
+},
+NFL:{
+players:["Patrick Mahomes","Josh Allen","Joe Burrow","Lamar Jackson","Justin Jefferson","Tyreek Hill","Christian McCaffrey","Travis Kelce","Aaron Rodgers","CeeDee Lamb","Jalen Hurts"],
+teams:["Cardinals","Falcons","Ravens","Bills","Panthers","Bears","Bengals","Browns","Cowboys","Broncos","Lions","Packers","Texans","Colts","Jaguars","Chiefs","Raiders","Chargers","Rams","Dolphins","Vikings","Patriots","Saints","Giants","Jets","Eagles","Steelers","49ers","Seahawks","Buccaneers","Titans","Commanders"]
+},
+NBA:{
+players:["LeBron James","Stephen Curry","Kevin Durant","Nikola Jokic","Giannis Antetokounmpo","Luka Dončić","Jayson Tatum","Joel Embiid"],
+teams:["Hawks","Celtics","Nets","Hornets","Bulls","Cavaliers","Mavericks","Nuggets","Pistons","Warriors","Rockets","Pacers","Clippers","Lakers","Grizzlies","Heat","Bucks","Timberwolves","Pelicans","Knicks","Thunder","Magic","76ers","Suns","Trail Blazers","Kings","Spurs","Raptors","Jazz","Wizards"]
+}
 };
 
 let names=[],roles=[],category="",answer="",viewed=0;
+
 const rand=a=>a[Math.floor(Math.random()*a.length)];
 const shuffle=a=>{for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}};
 
 function buildNames(){
-  nameInputs.innerHTML="";
-  for(let i=0;i<playerCount.value;i++){
-    const inp=document.createElement("input");
-    inp.placeholder=`Player ${i+1}`;
-    if(names[i]) inp.value=names[i];
-    nameInputs.appendChild(inp);
-  }
+nameInputs.innerHTML="";
+for(let i=0;i<playerCount.value;i++){
+const inp=document.createElement("input");
+inp.placeholder=`Player ${i+1}`;
+if(names[i]) inp.value=names[i];
+nameInputs.appendChild(inp);
 }
+}
+
 playerCount.onchange=buildNames;
 buildNames();
 
 function startGame(){
-  names=[...nameInputs.querySelectorAll("input")].map((i,idx)=>i.value||`Player ${idx+1}`);
-  setup.classList.add("hidden");
-  game.classList.remove("hidden");
-  startRound();
+names=[...nameInputs.querySelectorAll("input")].map((i,n)=>i.value||`Player ${n+1}`);
+setup.classList.add("hidden");
+game.classList.remove("hidden");
+startRound();
 }
 
 function editNames(){
-  game.classList.add("hidden");
-  setup.classList.remove("hidden");
-  buildNames();
+game.classList.add("hidden");
+setup.classList.remove("hidden");
+buildNames();
 }
 
 function startRound(){
-  revealBtn.style.display="none";
-  viewed=0;
+viewed=0;
+revealBtn.style.display="none";
 
-  const league=rand(Object.keys(data));
-  const type=Math.random()<0.5?"players":"teams";
-  category=`${league} ${type==="players"?"Player":"Team"}`;
-  answer=rand(data[league][type]);
+const league=rand(Object.keys(data));
+const type=Math.random()<0.5?"players":"teams";
+category=`${league} ${type==="players"?"Player":"Team"}`;
+answer=rand(data[league][type]);
 
-  speaker.textContent="First word: "+rand(names);
+speaker.textContent="First word: "+rand(names);
 
-  roles=Array(names.length).fill("PLAYER");
-  for(let i=0;i<Math.min(imposterCount.value,names.length-1);i++)roles[i]="IMPOSTER";
-  shuffle(roles);
+roles=Array(names.length).fill("PLAYER");
+for(let i=0;i<Math.min(imposterCount.value,names.length-1);i++)roles[i]="IMPOSTER";
+shuffle(roles);
 
-  grid.innerHTML="";
-  names.forEach((n,i)=>{
-    const t=document.createElement("div");
-    t.className="tile";
-    t.textContent=n;
-    t.onclick=()=>{
-      reveal(i);
-      t.classList.add("used");
-      viewed++;
-      if(viewed===names.length)revealBtn.style.display="inline-block";
-    };
-    grid.appendChild(t);
-  });
+grid.innerHTML="";
+names.forEach((n,i)=>{
+const t=document.createElement("div");
+t.className="tile";
+t.textContent=n;
+t.onclick=()=>{
+reveal(i);
+t.classList.add("used");
+viewed++;
+if(viewed===names.length)revealBtn.style.display="inline-block";
+};
+grid.appendChild(t);
+});
 }
 
 function reveal(i){
-  overlay.classList.add("show");
-  if(roles[i]==="IMPOSTER"){
-    cardTitle.textContent="IMPOSTER";
-    cardText.textContent=category;
-  }else{
-    cardTitle.textContent=answer;
-    cardText.textContent="Stay silent.";
-  }
+overlay.classList.add("show");
+if(roles[i]==="IMPOSTER"){
+cardTitle.textContent="IMPOSTER";
+cardText.textContent=category;
+}else{
+cardTitle.textContent=answer;
+cardText.textContent="Stay silent.";
 }
+}
+
 function closeOverlay(){overlay.classList.remove("show");}
 
 function showEnd(){
-  finalCategory.textContent=category;
-  finalAnswer.textContent=answer;
-  finalImposters.textContent=names.filter((_,i)=>roles[i]==="IMPOSTER").join(", ");
-  endOverlay.classList.add("show");
+finalCategory.textContent=category;
+finalAnswer.textContent=answer;
+finalImposters.textContent=names.filter((_,i)=>roles[i]==="IMPOSTER").join(", ");
+endOverlay.classList.add("show");
 }
+
 function closeEnd(){endOverlay.classList.remove("show");}
 </script>
 
