--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
 <meta name="apple-mobile-web-app-title" content="Imposter">
 
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
-<svg xmlns='http://www.w3.org2000/svg' viewBox='0 0 100 100'>
-<defs>
-<linearGradient id='g' x1='0' y1='0' x2='1' y2='1'>
-<stop offset='0%' stop-color='%2360a5fa'/>
-<stop offset='100%' stop-color='%231e40af'/>
-</linearGradient>
-</defs>
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
 <circle cx='50' cy='50' r='50' fill='%23020717'/>
-<circle cx='50' cy='38' r='16' fill='url(%23g)'/>
-<path d='M30 70c0-15 40-15 40 0v8H30z' fill='url(%23g)'/>
-<rect x='25' y='32' width='50' height='10' rx='5' fill='%23020717'/>
+<circle cx='50' cy='36' r='16' fill='%2360a5fa'/>
+<path d='M30 70c0-14 40-14 40 0v8H30z' fill='%2360a5fa'/>
+<rect x='24' y='30' width='52' height='10' rx='5' fill='%23020717'/>
 </svg>">
 
 <style>
@@ -29,9 +23,8 @@
 :root{
 --bg:#020617;
 --panel:#0f172a;
---tile:#111c3a;
+--panelSoft:#111827;
 --accent:#60a5fa;
---accent2:#1e40af;
 --text:#e5e7eb;
 --muted:#94a3b8;
 }
@@ -40,111 +33,83 @@
 
 body{
 margin:0;
-background:linear-gradient(180deg,#020617 0%,#020617 25%,#0b122a 60%,#020617 100%);
+background:linear-gradient(180deg,#020617,#0b122a,#020617);
 color:var(--text);
+padding:20px;
 text-align:center;
-padding:22px;
 }
 
 .hidden{display:none}
 
-h1{
-font-size:32px;
-font-weight:800;
-margin-bottom:6px;
-}
-
-.subtitle{
-font-size:14px;
-color:var(--muted);
-margin-bottom:18px;
-}
+h1{font-size:34px;font-weight:800;margin-bottom:6px}
+h2{margin:0 0 10px}
+p{color:var(--muted)}
 
 button{
 border:none;
-border-radius:999px;
-padding:14px 26px;
+border-radius:16px;
+padding:14px 20px;
 font-weight:700;
-background:linear-gradient(135deg,var(--accent),var(--accent2));
+background:var(--accent);
 color:#020617;
 cursor:pointer;
 transition:.2s;
 }
 
 button.secondary{
-background:#1e293b;
+background:var(--panelSoft);
 color:var(--text);
 }
 
 button:hover{transform:translateY(-2px)}
 
-.controls{
-display:flex;
-justify-content:center;
-align-items:center;
-gap:14px;
-flex-wrap:nowrap;
-margin-bottom:18px;
+.panel{
+background:linear-gradient(160deg,var(--panel),#020617);
+border-radius:24px;
+padding:24px;
+max-width:520px;
+margin:20px auto;
 }
 
-.controls label{
-display:flex;
-align-items:center;
-gap:8px;
-font-size:14px;
-color:var(--muted);
-}
-
-input{
-background:var(--panel);
-color:var(--text);
+input,select{
+background:var(--panelSoft);
 border:1px solid #1e293b;
-border-radius:14px;
+border-radius:12px;
 padding:10px;
-width:80px;
+color:var(--text);
 text-align:center;
+width:100%;
 }
 
-.names{
+.row{
 display:flex;
+gap:12px;
 flex-wrap:wrap;
-gap:10px;
 justify-content:center;
-margin-bottom:20px;
 }
-
-.names input{width:150px}
 
 .grid{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-gap:18px;
-max-width:760px;
-margin:26px auto;
+grid-template-columns:repeat(auto-fit,minmax(130px,1fr));
+gap:16px;
+margin-top:20px;
 }
 
 .tile{
-background:linear-gradient(145deg,var(--tile),#0b1433);
-padding:52px 10px;
-border-radius:24px;
+background:linear-gradient(145deg,#111c3a,#0b1433);
+padding:46px 10px;
+border-radius:20px;
 font-weight:600;
 cursor:pointer;
-transition:.25s;
+transition:.2s;
 }
 
-.tile:hover{transform:translateY(-3px)}
 .tile.used{opacity:0;pointer-events:none}
-
-#speaker{
-color:var(--accent);
-font-weight:700;
-margin:12px 0;
-}
 
 .overlay{
 position:fixed;
 inset:0;
-background:rgba(3,6,23,.88);
+background:rgba(2,6,23,.88);
 display:flex;
 align-items:center;
 justify-content:center;
@@ -156,115 +121,140 @@ transition:.3s;
 .overlay.show{opacity:1;pointer-events:auto}
 
 .card{
-background:linear-gradient(160deg,#0f172a,#020617);
-padding:36px 30px;
-border-radius:26px;
-max-width:400px;
+background:linear-gradient(160deg,var(--panel),#020617);
+border-radius:22px;
+padding:28px;
 width:90%;
-animation:pop .35s ease;
-}
-
-@keyframes pop{
-from{transform:scale(.9);opacity:0}
-to{transform:scale(1);opacity:1}
-}
-
-.card p{color:var(--muted)}
-
-#revealBtn{display:none;margin-left:8px}
-
-@media (max-width:420px){
-h1{font-size:28px}
-.tile{padding:44px 8px}
+max-width:380px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="setup">
+<!-- MENU -->
+<div id="menu" class="panel">
 <h1>Imposter</h1>
-<div class="subtitle">Find the fraud.</div>
-
-<div class="controls">
-<label>Players <input id="playerCount" type="number" min="4" max="12" value="6"></label>
-<label>Imposters <input id="imposterCount" type="number" min="1" max="3" value="1"></label>
+<p>Think carefully. Stay niche.</p>
+<button onclick="goSetup()">Start</button>
 </div>
 
-<div class="names" id="nameInputs"></div>
+<!-- SETUP -->
+<div id="setup" class="panel hidden">
+<h2>Game Setup</h2>
 
-<button onclick="startGame()">Start Game</button>
+<div class="row">
+<input type="number" id="playerCount" min="4" max="12" value="6" placeholder="Players">
+<input type="number" id="imposterCount" min="1" max="3" value="1" placeholder="Imposters">
 </div>
 
+<select id="categorySelect">
+<option value="all">All Categories</option>
+<option value="animals">Animals</option>
+<option value="food">Food</option>
+<option value="locations">Locations</option>
+<option value="objects">Objects</option>
+</select>
+
+<div id="names" class="row"></div>
+
+<button onclick="startGame()">Begin</button>
+<button class="secondary" onclick="goMenu()">Back</button>
+</div>
+
+<!-- GAME -->
 <div id="game" class="hidden">
-<h1>Imposter</h1>
-<p id="speaker"></p>
-
+<h2 id="speaker"></h2>
 <div class="grid" id="grid"></div>
-
-<button class="secondary" onclick="editNames()">✏️ Edit Names</button>
-<button onclick="startRound()">🔄 New Round</button>
-<button id="revealBtn" onclick="showEnd()">👁 Reveal</button>
+<div class="row">
+<button class="secondary" onclick="editNames()">Edit Names</button>
+<button onclick="newRound()">New Round</button>
+<button id="revealBtn" class="secondary hidden" onclick="showReveal()">Reveal</button>
+</div>
 </div>
 
+<!-- ROLE -->
 <div class="overlay" id="overlay">
 <div class="card">
-<h2 id="cardTitle"></h2>
-<p id="cardText"></p>
-<button onclick="closeOverlay()">Got it</button>
+<h2 id="roleTitle"></h2>
+<p id="roleText"></p>
+<button onclick="closeOverlay()">OK</button>
 </div>
 </div>
 
-<div class="overlay" id="endOverlay">
+<!-- REVEAL -->
+<div class="overlay" id="reveal">
 <div class="card">
-<h2>Round Reveal</h2>
-<p><b>Category:</b> <span id="finalCategory"></span></p>
+<h2>Reveal</h2>
 <p><b>Answer:</b> <span id="finalAnswer"></span></p>
 <p><b>Imposters:</b></p>
 <p id="finalImposters"></p>
-<button onclick="closeEnd()">Next Round</button>
+<button onclick="closeReveal()">Next</button>
 </div>
 </div>
 
 <script>
-const data={
-MLB:{
-players:["Shohei Ohtani","Aaron Judge","Mookie Betts","Ronald Acuña Jr.","Juan Soto","Mike Trout","Freddie Freeman","Bryce Harper","Fernando Tatis Jr.","Corey Seager","Jose Altuve","Vladimir Guerrero Jr."],
-teams:["Yankees","Red Sox","Blue Jays","Rays","Orioles","Guardians","Tigers","Royals","Twins","White Sox","Astros","Mariners","Rangers","Angels","Athletics","Braves","Mets","Phillies","Marlins","Nationals","Brewers","Cubs","Cardinals","Reds","Pirates","Dodgers","Padres","Giants","Diamondbacks","Rockies"]
-},
-NFL:{
-players:["Patrick Mahomes","Josh Allen","Joe Burrow","Lamar Jackson","Justin Jefferson","Tyreek Hill","Christian McCaffrey","Travis Kelce","Aaron Rodgers","CeeDee Lamb","Jalen Hurts"],
-teams:["Cardinals","Falcons","Ravens","Bills","Panthers","Bears","Bengals","Browns","Cowboys","Broncos","Lions","Packers","Texans","Colts","Jaguars","Chiefs","Raiders","Chargers","Rams","Dolphins","Vikings","Patriots","Saints","Giants","Jets","Eagles","Steelers","49ers","Seahawks","Buccaneers","Titans","Commanders"]
-},
-NBA:{
-players:["LeBron James","Stephen Curry","Kevin Durant","Nikola Jokic","Giannis Antetokounmpo","Luka Dončić","Jayson Tatum","Joel Embiid"],
-teams:["Hawks","Celtics","Nets","Hornets","Bulls","Cavaliers","Mavericks","Nuggets","Pistons","Warriors","Rockets","Pacers","Clippers","Lakers","Grizzlies","Heat","Bucks","Timberwolves","Pelicans","Knicks","Thunder","Magic","76ers","Suns","Trail Blazers","Kings","Spurs","Raptors","Jazz","Wizards"]
-}
+const categories={
+animals:[
+["Dog","leash"],["Cat","whiskers"],["Horse","saddle"],["Cow","pasture"],["Sheep","wool"],
+["Lion","mane"],["Tiger","stripes"],["Bear","hibernation"],["Elephant","trunk"],
+["Giraffe","spots"],["Monkey","branch"],["Dolphin","pod"],["Shark","fin"],
+["Frog","pond"],["Snake","coil"],["Eagle","perch"],["Owl","silent"],
+["Penguin","waddle"],["Kangaroo","pouch"],["Zebra","herd"]
+],
+food:[
+["Pizza","slice"],["Burger","stack"],["Pasta","twirl"],["Tacos","fold"],
+["Sushi","roll"],["Steak","sear"],["Ice Cream","scoop"],["Pancakes","stack"],
+["Fries","basket"],["Hot Dog","bun"],["Sandwich","layers"],["Soup","steam"],
+["Ramen","slurp"],["Salad","toss"],["Donut","glaze"],["Cookie","crumbs"],
+["Popcorn","kernel"],["Rice","grain"],["Cereal","bowl"]
+],
+locations:[
+["Beach","shore"],["School","hallway"],["Hospital","ward"],["Airport","gate"],
+["Mall","foodcourt"],["Library","stacks"],["Gym","rack"],["Park","bench"],
+["Stadium","bleachers"],["Theater","curtain"],["Zoo","enclosure"],
+["Museum","exhibit"],["Hotel","lobby"],["Restaurant","booth"],
+["Gas Station","pump"],["Subway","platform"],["Farm","barn"],
+["Camp","firepit"],["Office","cubicle"]
+],
+objects:[
+["Phone","screen"],["Laptop","keyboard"],["TV","remote"],["Clock","hands"],
+["Chair","legs"],["Table","edge"],["Backpack","zipper"],["Shoes","laces"],
+["Hat","brim"],["Glasses","frames"],["Wallet","fold"],
+["Keys","jingle"],["Bottle","cap"],["Cup","handle"],
+["Book","spine"],["Pen","click"],["Mirror","reflection"],
+["Couch","cushion"],["Door","hinge"]
+]
 };
 
-let names=[],roles=[],category="",answer="",viewed=0;
+let names=[],roles=[],current={},viewed=0;
 
-const rand=a=>a[Math.floor(Math.random()*a.length)];
-const shuffle=a=>{for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}};
+function goMenu(){
+menu.classList.remove("hidden");
+setup.classList.add("hidden");
+game.classList.add("hidden");
+}
+
+function goSetup(){
+menu.classList.add("hidden");
+setup.classList.remove("hidden");
+buildNames();
+}
 
 function buildNames(){
-nameInputs.innerHTML="";
+namesDiv.innerHTML="";
 for(let i=0;i<playerCount.value;i++){
 const inp=document.createElement("input");
 inp.placeholder=`Player ${i+1}`;
-if(names[i]) inp.value=names[i];
-nameInputs.appendChild(inp);
+namesDiv.appendChild(inp);
 }
 }
-
-playerCount.onchange=buildNames;
-buildNames();
 
 function startGame(){
-names=[...nameInputs.querySelectorAll("input")].map((i,n)=>i.value||`Player ${n+1}`);
+names=[...namesDiv.querySelectorAll("input")].map((i,n)=>i.value||`Player ${n+1}`);
 setup.classList.add("hidden");
 game.classList.remove("hidden");
-startRound();
+newRound();
 }
 
 function editNames(){
@@ -273,57 +263,58 @@ setup.classList.remove("hidden");
 buildNames();
 }
 
-function startRound(){
+function newRound(){
 viewed=0;
-revealBtn.style.display="none";
+revealBtn.classList.add("hidden");
 
-const league=rand(Object.keys(data));
-const type=Math.random()<0.5?"players":"teams";
-category=`${league} ${type==="players"?"Player":"Team"}`;
-answer=rand(data[league][type]);
+const pool=categorySelect.value==="all"
+?Object.values(categories).flat()
+:categories[categorySelect.value];
 
-speaker.textContent="First word: "+rand(names);
+const pick=pool[Math.floor(Math.random()*pool.length)];
+current={answer:pick[0],hint:pick[1]};
 
-roles=Array(names.length).fill("PLAYER");
-for(let i=0;i<Math.min(imposterCount.value,names.length-1);i++)roles[i]="IMPOSTER";
-shuffle(roles);
+roles=Array(names.length).fill("player");
+for(let i=0;i<Math.min(imposterCount.value,names.length-1);i++)roles[i]="imposter";
+roles.sort(()=>Math.random()-0.5);
 
+speaker.textContent="First word: "+names[Math.floor(Math.random()*names.length)];
 grid.innerHTML="";
+
 names.forEach((n,i)=>{
 const t=document.createElement("div");
 t.className="tile";
 t.textContent=n;
 t.onclick=()=>{
-reveal(i);
+showRole(i);
 t.classList.add("used");
 viewed++;
-if(viewed===names.length)revealBtn.style.display="inline-block";
+if(viewed===names.length)revealBtn.classList.remove("hidden");
 };
 grid.appendChild(t);
 });
 }
 
-function reveal(i){
+function showRole(i){
 overlay.classList.add("show");
-if(roles[i]==="IMPOSTER"){
-cardTitle.textContent="IMPOSTER";
-cardText.textContent=category;
+if(roles[i]==="imposter"){
+roleTitle.textContent="IMPOSTER";
+roleText.textContent=current.hint;
 }else{
-cardTitle.textContent=answer;
-cardText.textContent="Stay silent.";
+roleTitle.textContent=current.answer;
+roleText.textContent="Stay niche.";
 }
 }
 
-function closeOverlay(){overlay.classList.remove("show");}
+function closeOverlay(){overlay.classList.remove("show")}
 
-function showEnd(){
-finalCategory.textContent=category;
-finalAnswer.textContent=answer;
-finalImposters.textContent=names.filter((_,i)=>roles[i]==="IMPOSTER").join(", ");
-endOverlay.classList.add("show");
+function showReveal(){
+finalAnswer.textContent=current.answer;
+finalImposters.textContent=names.filter((_,i)=>roles[i]==="imposter").join(", ");
+reveal.classList.add("show");
 }
 
-function closeEnd(){endOverlay.classList.remove("show");}
+function closeReveal(){reveal.classList.remove("show")}
 </script>
 
 </body>
